# server/src/domain/repositories/metadata.repository.ts
@@ -11,6 +11,8 @@ export interface ReverseGeocodeResult {
   country: string | null;
   state: string | null;
   city: string | null;
+  address: string | null;
+  district: string | null;
 }
 
 export interface ExifDuration {
